# Aaalice_Minecraft_Translator

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.en-US.md  README.md  dev-reload.ps1  index.html  package-lock.json  package.json  vite.config.ts
.omc/: prd.json  progress.txt  project-memory.json
brainstorms/: 2026-06-08-brainstorm.md  2026-06-08-ui.md  2026-06-09-brainstorm.md
docs/: 00-index.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.omc/state/: agent-replay-16f1f38a-8ca3-4506-9a76-544df1cba025.jsonl  agent-replay-6fff8f0a-dec0-4b73-a7c1-df069cf637df.jsonl  agent-replay-96b09f32-ed00-4d04-bf08-cda68ed88836.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
src-tauri/.omc/state/sessions/16f1f38a-8ca3-4506-9a76-544df1cba025/: ralplan-state.json
src-tauri/.omc/state/sessions/6db4aacb-cfa2-4898-876b-f596a37ea4fa/: autopilot-state.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsi-hooks/: nsis_installer.nsh
src-tauri/resources/i18n-dict/: Dict-Sqlite.db  metadata.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: dictionary.rs  fonts.rs  game.rs  i18n_dict.rs  jobs.rs  llm.rs  logs.rs  mod.rs  pack.rs  scan.rs  settings.rs  translate.rs  validate.rs  warmup.rs
src-tauri/src/core/: cfpa.rs  dictionary.rs  jobs.rs  llm.rs  logging.rs  mod.rs  models.rs  packer.rs  paths.rs  pipeline.rs  scanner.rs  settings.rs  shield.rs
src-tauri/src/core/llm/: fake.rs
src-tauri/src/core/logging/: redact.rs  tests.rs
src-tauri/tests/: pipeline_integration.rs
src-tauri/tests/common/: mod.rs
(+95 files in other folders)
