[package]
name = "aaalice_mc_translator"
version = "0.1.0"
description = "Aaalice Minecraft Translator"
authors = ["Aaalice"]
edition = "2021"

[lib]
name = "aaalice_mc_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
rayon = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
zip = "2"
