[package]
name = "aaalice_mc_translator"
version = "0.2.4"
description = "Aaalice Minecraft Translator"
authors = ["Aaalice"]
license = "MIT"
edition = "2021"

[lib]
name = "aaalice_mc_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
open = "5"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
zip = "2"
font-kit = "0.14"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
